i found a weird cool bug where the catchy tagline doesnt get covered by the fixed nav bar when scrolling

--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,6 @@ ul li.why-grid-container {
   align-self: flex-start;
   height: 100px;
   width: 100px;
-  margin-right: 2px;
 }
 
 .why-grid-container strong {
